classDiagram
direction LR

class ProteinDesignTask {
  +task_id: str
  +state: TaskState
  +goal: str
  +constraints: dict
  +plan_version: int
}

class WorkflowRuntime {
  +run_task_sync(task)
  +advance_state(task, state)
  +emit_event(event)
  +create_snapshot(task)
}

class PlannerAgent {
  +plan_top_k(task)
  +patch_top_k(task, step_result)
  +replan_top_k(task)
}

class ExecutorAgent {
  +execute(plan, task)
  +retry_step(step)
  +trigger_patch(step_result)
  +trigger_replan(step_result)
}

class SafetyAgent {
  +assess_input(task)
  +assess_step(step_result)
  +assess_output(result)
}

class SummarizerAgent {
  +build_result(task)
  +write_report(result)
}

class ToolKG {
  +lookup_capability(goal)
  +check_constraints(step)
}

class ToolAdapter {
  +run(step_input)
  +normalize_output()
}

class Plan {
  +plan_id: str
  +steps: Step[]
  +score_breakdown: dict
  +risk_level: str
  +cost_estimate: float
}

class StepResult {
  +step_id: str
  +status: str
  +metrics: dict
  +failure_code: str
  +artifacts: dict
}

class PendingAction {
  +action_id: str
  +action_type: str
  +candidates: CandidateSet
  +default_recommendation: str
}

class Decision {
  +decision_id: str
  +choice: str
  +selected_candidate_id: str
}

class EventLog {
  +event_id: str
  +event_type: str
  +timestamp: datetime
}

class TaskSnapshot {
  +snapshot_id: str
  +step_index: int
  +plan_version: int
}

class DesignResult {
  +sequence: str
  +structure_path: str
  +scores: dict
  +report_path: str
}

ProteinDesignTask "1" --> "1" WorkflowRuntime : enters
WorkflowRuntime "1" --> "1" PlannerAgent : orchestrates
WorkflowRuntime "1" --> "1" ExecutorAgent : orchestrates
WorkflowRuntime "1" --> "1" SafetyAgent : consults
WorkflowRuntime "1" --> "1" SummarizerAgent : invokes
PlannerAgent "1" --> "1" ToolKG : queries
PlannerAgent "1" --> "1..*" Plan : generates
ExecutorAgent "1" --> "1" Plan : executes
ExecutorAgent "1" --> "1..*" ToolAdapter : dispatches
ToolAdapter "1" --> "1..*" StepResult : returns
SafetyAgent "1" --> "1..*" StepResult : evaluates
SummarizerAgent "1" --> "1" DesignResult : produces
WorkflowRuntime "1" *-- "0..1" PendingAction : creates
PendingAction "1" --> "0..1" Decision : resolved by
WorkflowRuntime "1" *-- "0..*" EventLog : writes
WorkflowRuntime "1" *-- "0..*" TaskSnapshot : persists
ProteinDesignTask "1" o-- "0..1" Plan : active plan
ProteinDesignTask "1" o-- "0..1" DesignResult : final result
